--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Commit and Push if changes
         run: |
-          git config --global user.email "davidteather@users.noreply.github.com"
-          git config --global user.name "David Teather"
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
           git add README.md
           git commit -m "Automatically update README" || echo "No changes to commit"
           git push
