--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add README.md
+          git add README.md cached_stats.json
           git commit -m "Automatically update README" || echo "No changes to commit"
           git push
